--- a/app/views/pairs/_navigation_buttons.html.erb
+++ b/app/views/pairs/_navigation_buttons.html.erb
@@ -12,7 +12,7 @@
 <div style="display: flex; justify-content: center; gap: 12px; max-width: 400px; margin: 15px auto;">
   <form method="get" action="<%= rank_color_pairs_path %>" style="flex: 1;">
     <input type="hidden" name="new_left_color" value="true" />
-    <button type="submit" style="width: 100%;">New Left Color</button>
+    <button type="submit" style="width: 100%;">&nbsp;New Left Color&nbsp;</button>
   </form>
 
   <form method="get" action="<%= rank_color_pairs_path %>" style="flex: 1;">
