--- a/app/views/pairs/_color_pair_column.html.erb
+++ b/app/views/pairs/_color_pair_column.html.erb
@@ -6,10 +6,10 @@
   - title: string for the column header
 %>
 
-<div id="<%= column_type %>_pairs" class="sortable-list" style="flex: 1;">
+<div id="<%= column_type %>_pairs" class="sortable-list" style="flex: 1; text-align: center;">
   <% if pairs.present? %>
     <h3><%= title %></h3>
-    <ul id="<%= column_type %>_pairs_list" style="text-align: center; list-style:none; padding:0;">
+    <ul id="<%= column_type %>_pairs_list" style="list-style:none; padding:0;">
       <% pairs.each do |color_pair_vote| %>
         <li data-id="<%= color_pair_vote.id %>" style="flex-direction: column; margin: 10px 0; cursor: grab; text-align: center; margin-bottom: 30px;">
           <span style="font-weight: bold;">&nbsp;Rank:&nbsp;<span class="position-number" style="font-weight: normal;"><%= color_pair_vote.position.to_i + 1 %></span></span>
