--- a/app/views/color_ranker/_middle_column.html.erb
+++ b/app/views/color_ranker/_middle_column.html.erb
@@ -14,17 +14,8 @@
   <button class="mobile-view-results-btn" onclick="showResultsView()">View Results</button>
 
   <% unless @show_pikachu %>
-    <!-- Color Pair Box Display -->
-    <div style="display: flex; justify-content: center; align-items: center; gap: 0px;">
-      <!-- Color Box -->
-      <form method="get" action="<%= rank_colors_path %>">
-        <input type="hidden" name="new_color" value="true" />
-        <button type="submit" style="border: none; background: none; padding: 0; margin: 0; cursor: pointer;">
-          <div class="main-color-box" style="background-color: <%= @hex_color %>;"></div>
-          <p>Hex: <%= @hex_color %></p>
-        </button>
-      </form>
-    </div>
+    <!-- Color Box Display -->
+    <%= render 'color_box' %>
   <% end %>
 
   <% if @show_pikachu %>
@@ -53,6 +44,11 @@
   <!-- Route to Color Pairs page -->
   <div style="text-align: center; margin: 15px">
     <%= link_to "Color Pairs Ranker", rank_color_pairs_path %>
+  </div>
+  
+  <!-- Route to Home page -->
+  <div style="text-align: center; margin: 15px">
+    <%= link_to "Home", index_path %>
   </div>
 
   <!-- Flash Messages -->
