--- a/app/views/pairs/_middle_column.html.erb
+++ b/app/views/pairs/_middle_column.html.erb
@@ -15,25 +15,7 @@
 
   <% unless @show_pikachu %>
     <!-- Color Pair Box Display -->
-    <div style="display: flex; justify-content: center; align-items: center; gap: 0px;">
-      <!-- Left Color Box -->
-      <form method="get" action="<%= rank_color_pairs_path %>">
-        <input type="hidden" name="new_left_color" value="true" />
-        <button type="submit" style="border: none; background: none; padding: 0; margin: 0; cursor: pointer;">
-          <div class="pair-color-box pair-color-box-left" style="background-color: <%= @color_pair[0] %>;"></div>
-          <p>Hex: <%= @color_pair[0] %></p>
-        </button>
-      </form>
-
-      <!-- Right Color Box -->
-      <form method="get" action="<%= rank_color_pairs_path %>">
-        <input type="hidden" name="new_right_color" value="true" />
-        <button type="submit" style="border: none; background: none; padding: 0; margin: 0; cursor: pointer;">
-          <div class="pair-color-box pair-color-box-right" style="background-color: <%= @color_pair[1] %>;"></div>
-          <p>Hex: <%= @color_pair[1] %></p>
-        </button>
-      </form>
-    </div>
+    <%= render 'pair_color_box' %>
   <% end %>
 
   <% if @show_pikachu %>
@@ -62,6 +44,11 @@
   <!-- Route to Color Ranker page -->
   <div style="text-align: center; margin: 15px">
     <%= link_to "Color Ranker", rank_colors_path %>
+  </div>
+
+  <!-- Route to Home page -->
+  <div style="text-align: center; margin: 15px">
+    <%= link_to "Home", index_path %>
   </div>
 
   <!-- Flash Messages -->
