Add main header at top of all pages in layout > application.html.erb. Add hoink to header so user can be taken to home page if they click the header. Add user sign up and login links. Note: there is a bug when logging out. Refined color box sizes and fonts.

--- a/app/assets/stylesheets/mobile_responsive.css
+++ b/app/assets/stylesheets/mobile_responsive.css
@@ -2,27 +2,27 @@
 @media (max-width: 768px) {
     .mobile-view-results-btn {
       display: block;
-      width: 200px;
-      margin: 15px auto;
+      width: 125px;
+      margin: 0px auto;
       background-color: #4CAF50;
       color: white;
       border: none;
       padding: 12px 20px;
-      font-size: 16px;
+      font-size: 14px;
       border-radius: 25px;
       cursor: pointer;
     }
   
     .mobile-back-btn {
       display: none;
-      position: sticky;
+      position: static;
       top: 177px;
       margin: 15px auto;
       background-color: #2196F3;
       color: white;
       border: none;
       padding: 12px 20px;
-      font-size: 16px;
+      font-size: 14px;
       border-radius: 25px;
       cursor: pointer;
       z-index: 1000;
