--- a/app/views/color_ranker/_color_box.html.erb
+++ b/app/views/color_ranker/_color_box.html.erb
@@ -7,7 +7,7 @@
         <button type="submit" style="border: none; background: none; padding: 0; margin: 0; cursor: pointer;">
           <div class="main-color-box" style="background-color: <%= @hex_color %>;"></div>
         </button>
-        <p>Hex: <%= @hex_color %></p>
+        <p style="font-size: 14px;">Hex: <%= @hex_color %></p>
       </form>
     </div>
 </div>
