--- a/app/views/color_ranker/rank_colors.html.erb
+++ b/app/views/color_ranker/rank_colors.html.erb
@@ -14,8 +14,8 @@
 
   </head>
   <body class="mobile-main-view">
-    <h1 style="text-align:center">Welcome to Color Ranker!</h1>
-    <h2 style="text-align:center">Which color do you like better?</h2>
+    <h3 style="text-align:center">Welcome to Color Ranker!</h3>
+    <p style="text-align:center">Which color do you like better?</p>
     <p style="text-align:center">Select up to <%= @max_colors %> ugly colors and <%= @max_colors %> great colors!</p>
     
     <!-- Mobile Back Button -->
