--- a/app/views/pairs/rank_color_pairs.html.erb
+++ b/app/views/pairs/rank_color_pairs.html.erb
@@ -14,8 +14,8 @@
 
   </head>
   <body class="mobile-main-view">
-    <h1 style="text-align:center">Welcome to Color Pair Ranker!</h1>
-    <h2 style="text-align:center">Which color pair do you like better?</h2>
+    <h3 style="text-align:center">Welcome to Color Pair Ranker!</h3>
+    <p style="text-align:center">Which color pair do you like better?</p>
     <p style="text-align:center">Select up to <%= @max_pairs %> ugly pairs and <%= @max_pairs %> great pairs!</p>
     
     <!-- Mobile Back Button -->
