--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,34 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+
   </head>
 
   <body>
+    <header style="padding: 10px; position: relative;">
+      <!-- Centered Title -->
+      <div style="text-align: center; font-size: 28px; font-weight: bold;">
+        <%= link_to "Color Ranker", index_path, style: "text-decoration: none; color: inherit;" %>
+      </div>
+
+      <!-- Sign Up / Login (top-right corner) -->
+      <div style="position: absolute; top: 10px; right: 10px;">
+        <% if user_signed_in? %>
+          Hello, <%= current_user.username %> |
+          <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+
+        <% else %>
+          <%= link_to 'Sign Up', new_user_registration_path %> |
+          <%= link_to 'Login', new_user_session_path %>
+        <% end %>
+      </div>
+    </header>
+
+
     <%= yield %>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
   </body>
 </html>
