--- a/app/views/pairs/_pair_color_box.html.erb
+++ b/app/views/pairs/_pair_color_box.html.erb
@@ -5,7 +5,7 @@
     <button type="submit" style="border: none; background: none; padding: 0; margin: 0; cursor: pointer;">
         <div class="pair-color-box pair-color-box-left" style="background-color: <%= @color_pair[0] %>;"></div>
     </button>
-    <p>Hex: <%= @color_pair[0] %></p>
+    <p style="font-size: 14px;">Hex: <%= @color_pair[0] %></p>
     </form>
 
     <!-- Right Color Box -->
@@ -14,6 +14,6 @@
     <button type="submit" style="border: none; background: none; padding: 0; margin: 0; cursor: pointer;">
         <div class="pair-color-box pair-color-box-right" style="background-color: <%= @color_pair[1] %>;"></div>
     </button>
-    <p>Hex: <%= @color_pair[1] %></p>
+    <p style="font-size: 14px;">Hex: <%= @color_pair[1] %></p>
     </form>
 </div>
