Fix log out bug in application.html.erb line 37. Remove import Rails... from application.js which was causing an 'Uncaught TypeError... Rails.start is not a function'. Removing the line fixed the drag and drop bug and the fade out bug where both did not work in last push.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,6 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
   </head>
 
@@ -35,7 +34,7 @@
       <div style="position: absolute; top: 10px; right: 10px;">
         <% if user_signed_in? %>
           Hello, <%= current_user.username %> |
-          <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+          <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete } %>
 
         <% else %>
           <%= link_to 'Sign Up', new_user_registration_path %> |
